--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
         "lin3s/admin-bundle": "dev-master",
-        "lin3s/shared-kernel": "dev-master",
-        "lin3s/cms-kernel": "dev-master"
+        "lin3s/shared-kernel": "dev-master"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.11",
+        "lin3s/cms-kernel": "dev-master",
         "simple-bus/symfony-bridge": "^4.1"
     },
     "scripts": {
