Added minimum-stability dev and prefer stable true

--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,7 @@
         "psr-4": {
             "Tests\\Application\\": "tests/Application/src/"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
