[feature] translate error message if is defined in admin.yml

--- a/src/LIN3S/AdminDDDExtensionsBundle/Resources/config/services.yml
+++ b/src/LIN3S/AdminDDDExtensionsBundle/Resources/config/services.yml
@@ -16,6 +16,7 @@ services:
            - "@twig"
            - "@session.flash_bag"
            - "@router"
+           - "@translator"
         tags:
             - { name: 'lin3s_admin.action', alias: ddd_handle_command }
 
