--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         }
     ],
     "require": {
-        "lin3s/admin-bundle": "^0.5 || dev-master || *",
+        "lin3s/admin-bundle": ">=0.5",
         "lin3s/shared-kernel": "^0.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.11",
-        "lin3s/cms-kernel": "dev-master",
+        "lin3s/cms-kernel": "^0.2",
         "simple-bus/symfony-bridge": "^4.1",
         "symfony/web-server-bundle": "^3.3",
         "monolog/monolog": "^1.23"
@@ -39,7 +39,5 @@
         "psr-4": {
             "Tests\\Application\\": "tests/Application/src/"
         }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
