--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "lin3s/admin-bundle": ">=0.5",
-        "lin3s/shared-kernel": "^0.3"
+        "lin3s/shared-kernel": ">=0.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.11",
